--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ if ('serviceWorker' in navigator) {
 ① ブリージング・クロール（仰向け） <button onclick="openModal('e-breath1')">解説</button><br>
 ② クワドラペッド・ブレス（四つ這い） <button onclick="openModal('e-breath2')">解説</button><br>
 ③ リブアイソレーション・ローテーション（胸郭分離） <button onclick="openModal('e-breath3')">解説</button><br>
-④ スタンディング・ブリージング・リーチ <button onclick="openModal('e-breath4')">解説</button><br>
+④スティック・ブリージングリフト <button onclick="openModal('e-breath4')">解説</button><br>
 ⑤ クロスアーム・ディープブレス（座位） <button onclick="openModal('e-breath5')">解説</button></p>
 
 <p><strong>強度：</strong> 各種目30秒×3set（サーキット約6分×3set＝約20分）</p>
@@ -345,17 +345,19 @@ if ('serviceWorker' in navigator) {
 <p><strong>誤り例：</strong> 肩を回す・骨盤が動く・胸で呼吸する。</p>
 </div></div>
 
-<!-- ④ スタンディング・ブリージング・リーチ -->
+<!-- ④ スティック・ブリージングリフト -->
 <div id="e-breath4" class="modal"><div class="modal-content">
 <span class="close" onclick="closeModal('e-breath4')">&times;</span>
-<h3>④ スタンディング・ブリージング・リーチ</h3>
-<p><strong>目的：</strong> 立位での呼吸制御と姿勢連動を強化する。</p>
+<h3>④ スティック・ブリージングリフト</h3>
+<p><strong>目的：</strong> 棒（シャフト）を用いて胸郭の上下伸展と呼吸連動を強化する。</p>
 <p><strong>方法：</strong><br>
-1. 立位で片腕を頭上に伸ばす。<br>
-2. 吸気で肋骨を開きながら上方へ伸びる。<br>
-3. 吐気で骨盤を安定させつつ、反対側に軽く体を傾ける。</p>
-<p><strong>ポイント：</strong> 伸びながら呼吸する＝呼吸が動きを導く。</p>
-<p><strong>誤り例：</strong> 腕で引っ張る・呼吸が浅い・肩を上げる。</p>
+1. 足を肩幅に開き、両手でシャフトを肩幅より少し広く持つ。<br>
+2. 吸気でシャフトを頭上へ持ち上げながら、肋骨を縦に伸ばす。<br>
+3. 吐気で骨盤を安定させ、シャフトを胸の前まで下ろす。<br>
+4. 呼吸ごとに「吸って立ち上がる → 吐いて安定させる」を繰り返す。</p>
+<p><strong>ポイント：</strong> 肩で上げず、肋骨の動きで棒を持ち上げる感覚をつかむ。</p>
+<p><strong>強度：</strong> 30秒×3set／RPE6。</p>
+<p><strong>誤り例：</strong> 腕で引き上げる・腰を反る・呼吸を止める。</p>
 </div></div>
 
 <!-- ⑤ クロスアーム・ディープブレス -->
@@ -414,7 +416,7 @@ if ('serviceWorker' in navigator) {
 ② スプリットローテーション <button onclick="openModal('e-rib2')">解説</button><br>
 ③ ツイストクランチ <button onclick="openModal('e-rib3')">解説</button><br>
 ④ プランクローテーション <button onclick="openModal('e-rib4')">解説</button><br>
-⑤ ブリージングリーチ <button onclick="openModal('e-rib5')">解説</button></p>
+⑤ スティック・ローテーションリーチ <button onclick="openModal('e-rib5')">解説</button></p>
 <p><strong>総強度：</strong> 各6〜8分×3set（計約25分）／RPE7。</p>
 <p><strong>誤り例：</strong> 骨盤が回る・肩で回す・呼吸を止める。</p>
 </div></div>
@@ -428,10 +430,10 @@ if ('serviceWorker' in navigator) {
 <p><strong>目的：</strong> 骨盤を固定した状態で肋骨の回旋を引き出す。</p>
 <p><strong>方法：</strong><br>
 1. 片膝立ち姿勢で両腕を前方に伸ばす。<br>
-2. 吐気に合わせて胸郭を回旋させ、骨盤は正面を維持。<br>
+2. 吐気に合わせて肋骨を回旋させ、骨盤・両腕は正面を維持。<br>
 3. 吸気で戻す。</p>
 <p><strong>強度：</strong> 各方向10回×2set／RPE6。</p>
-<p><strong>誤り例：</strong> 骨盤が回る・腕で捻る・呼吸を止める。</p>
+<p><strong>誤り例：</strong> 骨盤・両腕が回る・腕で捻る・呼吸を止める。</p>
 </div></div>
 
 <!-- スプリットローテーション -->
@@ -440,8 +442,8 @@ if ('serviceWorker' in navigator) {
 <h3>スプリットローテーション</h3>
 <p><strong>目的：</strong> 前後に分けた脚位で、骨盤と肋骨の分離回旋を作る。</p>
 <p><strong>方法：</strong><br>
-1. 前後開脚のスプリット姿勢をとる。<br>
-2. 前脚側へ肋骨を回旋、後脚側で骨盤を安定。<br>
+1. 前後開脚のスプリット姿勢で両腕を前に伸ばす。<br>
+2. 前脚側へ肋骨を回旋、骨盤・両腕を安定。<br>
 3. 吐く息で回旋、吸気で戻す。</p>
 <p><strong>強度：</strong> 各方向10回×2set／RPE6〜7。</p>
 <p><strong>誤り例：</strong> 膝が動く・腰を反る・呼吸が浅い。</p>
@@ -462,30 +464,35 @@ if ('serviceWorker' in navigator) {
 <p><strong>誤り例：</strong> 肩で回す・腹筋で起きる・骨盤が動く。</p>
 </div></div>
 
-<!-- プランクローテーション -->
+<!-- ハイプランクローテーション -->
 <div id="e-rib4" class="modal"><div class="modal-content">
 <span class="close" onclick="closeModal('e-rib4')">&times;</span>
-<h3>プランクローテーション</h3>
+<h3>ハイプランクローテーション</h3>
 <p><strong>目的：</strong> 体幹安定の中で胸郭を独立回旋させる。</p>
 <p><strong>方法：</strong><br>
-1. プランク姿勢をとり、片腕を天井方向に上げる。<br>
-2. 吐気で胸郭を開き、吸気で戻す。<br>
-3. 骨盤は常に正面を維持。</p>
+1. ハイプランク姿勢をとり、肋骨を回旋させる。<br>
+2. 肋骨が回旋すると片手が浮く。<br>
+3. 肋骨が回旋しきったら肩甲骨で腕を天井に伸ばす。<br>
+4. 吐気で肋骨を回旋、吸気で戻す。<br>
+5. 骨盤は常に正面を維持。</p>
 <p><strong>強度：</strong> 各方向8回×2set／RPE7。</p>
-<p><strong>誤り例：</strong> 腰を反る・骨盤が動く・呼吸を止める。</p>
+<p><strong>誤り例：</strong> 腰を反る・骨盤が動く・腕で回旋・呼吸を止める。</p>
 </div></div>
 
-<!-- ブリージングリーチ -->
+<!-- スティック・ローテーションリーチ -->
 <div id="e-rib5" class="modal"><div class="modal-content">
 <span class="close" onclick="closeModal('e-rib5')">&times;</span>
-<h3>ブリージングリーチ</h3>
-<p><strong>目的：</strong> 呼吸で胸郭を広げながら、上肢リーチによる回旋誘導を行う。</p>
+<h3>⑤ スティック・ローテーションリーチ</h3>
+<p><strong>目的：</strong> 肋骨と上肢を逆方向に回旋させ、胸郭分離と回旋制御を鍛える。</p>
 <p><strong>方法：</strong><br>
-1. 仰向けで片腕を頭上に伸ばし、吸気で肋骨を拡げる。<br>
-2. 吐気でリーチ方向へ滑らせ、胸郭を開く。<br>
-3. 骨盤を固定し、上半身の回旋で誘導。</p>
-<p><strong>強度：</strong> 各方向8回×2set／RPE6。</p>
-<p><strong>誤り例：</strong> 肩で引く・腰を反る・呼吸が浅い。</p>
+1. 肩幅で立ち両手でスティックを持って胸の高さで構える。<br>
+2. 骨盤と下半身を固定したまま、<strong>スティックを左に回すときは肋骨を右へ、</strong>逆方向にも同様に動かす。<br>
+3. 呼吸は「吐きながらスティックを動かし、吸いながら戻す」。<br>
+4. 胸郭が“滑る”ように動き、肩が回らないことがポイント。</p>
+<p><strong>強度：</strong> 各方向10回×2set／RPE6。</p>
+<p><strong>ポイント：</strong> スティックの動きと肋骨の動きを<strong>あえて逆にする</strong>ことで、胸郭と肩甲帯の独立制御を体得。<br>
+「上半身を止め、胸郭を回す」ではなく、「スティックと胸郭を逆に流す」。</p>
+<p><strong>誤り例：</strong> 肩で引く・骨盤が回る・呼吸を止める。</p>
 </div></div>
 
 
