--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ if ('serviceWorker' in navigator) {
       <td>d</td>
       <td>自走式トレッドミル</td>
       <td>地面反力と骨盤主導の加速</td>
-      <td>15秒スプリント・スティック走・インターバル走 <button onclick="openModal('d')">詳細</button></td>
+      <td>15秒スプリント・30秒テンポ走・インターバル走 <button onclick="openModal('d')">詳細</button></td>
     </tr>
     <tr>
       <td>e</td>
