--- a/k.html
+++ b/k.html
@@ -6,7 +6,7 @@
 <title>Y.KURODA</title>
 <style>
   body {
-    background: #0d1117
+    background: #0d1117;
     color: #e5e7eb;
     font-family: 'Noto Sans JP', sans-serif;
     margin: 0;
