--- a/f.html
+++ b/f.html
@@ -17,6 +17,39 @@
   .btn-back{display:block;text-align:center;margin-top:60px;}
   .btn-back a{background:#facc15;color:#000;padding:10px 20px;border-radius:6px;text-decoration:none;font-weight:bold;}
   .btn-back a:hover{background:#eab308;}
+  body {
+  max-width: 980px;
+  margin-left: auto;
+  margin-right: auto;
+}
+table {
+  display: block;
+  overflow-x: auto;
+  border-radius: 8px;
+}
+th, td {
+  font-size: 0.95rem;
+  white-space: nowrap;
+}
+@media screen and (max-width: 768px) {
+  body {
+    padding: 20px 14px 60px;
+    font-size: 0.95rem;
+  }
+  h1 {
+    font-size: 1.4rem;
+  }
+  th, td {
+    font-size: 0.85rem;
+    padding: 8px;
+  }
+  table {
+    font-size: 0.85rem;
+  }
+  footer {
+    font-size: 0.8rem;
+  }
+}
 </style>
 </head>
 <body>
@@ -34,8 +67,6 @@
 </section>
 
 <section id="feedback">
-  <h2>フィードバック</h2>
- <section id="feedback">
   <h2>フィードバック</h2>
 
   <h3>良い特徴</h3>
