--- a/k.html
+++ b/k.html
@@ -69,6 +69,46 @@
   .btn-back a:hover {
     background: #2563eb;
   }
+  /* body内に追加 */
+body {
+  max-width: 980px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* 表スクロール対応 */
+table {
+  display: block;
+  overflow-x: auto;
+  border-radius: 8px;
+}
+
+/* 文字の折り返しと可読性 */
+th, td {
+  font-size: 0.95rem;
+  white-space: nowrap;
+}
+
+/* スマホ最適化 */
+@media screen and (max-width: 768px) {
+  body {
+    padding: 20px 14px 60px;
+    font-size: 0.95rem;
+  }
+  h1 {
+    font-size: 1.4rem;
+  }
+  th, td {
+    font-size: 0.85rem;
+    padding: 8px;
+  }
+  table {
+    font-size: 0.85rem;
+  }
+  footer {
+    font-size: 0.8rem;
+  }
+}
 </style>
 </head>
 <body>
