--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ if ('serviceWorker' in navigator) {
 <body>
 
 <header>
-  <h1>FKK投手トレーニング2025オフシーズン</h1>
+  <h1>FKK投手トレーニング<br>2025オフシーズン</h1>
   <p>Equal Load System <br>― 環境に応じて同等負荷を得る<br>「呼吸 × 出力 × 流れ」</p>
 </header>
 
