--- a/t.html
+++ b/t.html
@@ -12,8 +12,7 @@
     margin:0;
     padding:40px 20px 80px;
     line-height:1.8;
-    /* 追加：中央寄せレイアウト */
-    max-width: 980px;
+    max-width: 980px;          /* 中央寄せレイアウト */
     margin-left: auto;
     margin-right: auto;
   }
@@ -25,8 +24,7 @@
     border-collapse:collapse;
     background:#111827;
     margin-top:15px;
-    /* 追加：横スクロール&角丸 */
-    display:block;
+    display:block;             /* 横スクロール */
     overflow-x:auto;
     border-radius:8px;
   }
@@ -34,8 +32,7 @@
     border:1px solid #1f2937;
     padding:10px;
     text-align:center;
-    /* 追加：可読サイズ＆折り返し防止 */
-    font-size:0.95rem;
+    font-size:0.95rem;         /* 可読サイズ＆折り返し防止 */
     white-space:nowrap;
   }
   th{background:#7f1d1d;color:#f1f5f9;}
@@ -45,7 +42,7 @@
   .btn-back a{background:#ef4444;color:#fff;padding:10px 20px;border-radius:6px;text-decoration:none;}
   .btn-back a:hover{background:#b91c1c;}
 
-  /* 追加：スマホ最適化 */
+  /* スマホ最適化 */
   @media screen and (max-width: 768px){
     body{padding:20px 14px 60px;font-size:0.95rem;}
     h1{font-size:1.4rem;}
@@ -54,21 +51,57 @@
     footer{font-size:0.8rem;}
   }
 </style>
+
+<!-- フィードバック開閉UI（黒田と同仕様） -->
+<style>
+.feedback-summary{
+  background:#1e293b;
+  border:1px solid #334155;
+  border-radius:8px;
+  padding:16px;
+  text-align:center;
+  cursor:pointer;
+  transition:background 0.3s;
+  -webkit-tap-highlight-color: transparent;
+}
+.feedback-summary:hover{ background:#2a3b52; }
+.feedback-summary .catch{
+  font-size:1.1rem;
+  color:#fca5a5;   /* 赤系に合わせた淡色 */
+  font-weight:bold;
+  margin:0;
+}
+.feedback-summary .hint{
+  color:#9ca3af;
+  font-size:0.85rem;
+  margin-top:4px;
+}
+.feedback-detail{
+  display:none;
+  margin-top:20px;
+  opacity:0;
+  transition:opacity 0.45s ease;
+}
+.feedback-detail.show{
+  display:block;
+  opacity:1;
+}
+</style>
 </head>
 <body>
- 
+
 <script>
-document.addEventListener("DOMContentLoaded", function() {
+/* パスワード保護（キャンセル含め弾く） */
+document.addEventListener("DOMContentLoaded", function(){
   const password = prompt("パスワードを入力してください：");
-  if (password !== "19yt") {
+  if (!password || password !== "19yt") {
     alert("パスワードが違います。");
-    window.location.href = "index.html"; // トップページなどにリダイレクト
+    window.location.href = "index.html";
   }
 });
 </script>
- 
+
 <header>
-  <!-- 修正：表記ミスのみ -->
   <h1>Y. TATSUMURA</h1>
 </header>
 
@@ -82,25 +115,35 @@ document.addEventListener("DOMContentLoaded", function() {
 
 <section id="feedback">
   <h2>フィードバック</h2>
-  <h3>良い特徴</h3>
-  <p>・体の感じ方に繊細さがあり、動きの“質”を感じ取れる感性がある。<br>
-     ・リズムとテンポの取り方がうまく、形で覚えるのではなく感覚で掴むタイプ。<br>
-     ・ボールの回転や軌道に対する感受性が高く、復帰後の精度型投手としての伸びしろは十分。</p>
 
-  <h3>課題</h3>
-  <p>「壊したくない」という意識が強すぎて、体の動きを自分で止めている。<br>
-     それが痛みの再発を防いでいるように見えて、実際は“出力を奪っている”。<br>
-     恐怖ではなく、制御で守る段階に入っている。<br>
-     今は安全領域の中で<strong>“骨盤を動かし、胸を遅らせる”</strong>時間を取り戻すこと。<br>
-     回旋が戻れば、腕の振りは自然に戻る。<br><br>
-     自分流で感覚を探すのではなく、信頼できる手を借りながら“正しく冒険”していくこと。<br>
-     今の慎重さは悪くない、ただそのままでは150kmのポテンシャルは消える。</p>
+  <!-- 一言キャッチ（既存本文の表現を抽出してUI化。内容は不変更） -->
+  <div class="feedback-summary" onclick="toggleFeedback()">
+    <p class="catch">“骨盤を動かし、胸を遅らせる”時間を取り戻す。</p>
+    <p class="hint">(タップして詳細を表示)</p>
+  </div>
 
-  <h3>心拍傾向</h3>
-  <p>平均HR<strong>150bpm</strong>、1分後ΔHR<strong>22bpm</strong>。<br>
-     → 回復力は可もなく不可もなく。運動中の呼吸は浅く、胸式に偏っている傾向。<br>
-     胸郭の可動が制限されていると、回旋動作にも制約が出る。<br>
-     吸気で肋骨を開き、吐気で骨盤を前に送るテンポを意識すると、トルクが戻り始める。</p>
+  <!-- 詳細（本文は一字一句そのまま） -->
+  <div id="feedback-detail" class="feedback-detail">
+    <h3>良い特徴</h3>
+    <p>・体の感じ方に繊細さがあり、動きの“質”を感じ取れる感性がある。<br>
+       ・リズムとテンポの取り方がうまく、形で覚えるのではなく感覚で掴むタイプ。<br>
+       ・ボールの回転や軌道に対する感受性が高く、復帰後の精度型投手としての伸びしろは十分。</p>
+
+    <h3>課題</h3>
+    <p>「壊したくない」という意識が強すぎて、体の動きを自分で止めている。<br>
+       それが痛みの再発を防いでいるように見えて、実際は“出力を奪っている”。<br>
+       恐怖ではなく、制御で守る段階に入っている。<br>
+       今は安全領域の中で<strong>“骨盤を動かし、胸を遅らせる”</strong>時間を取り戻すこと。<br>
+       回旋が戻れば、腕の振りは自然に戻る。<br><br>
+       自分流で感覚を探すのではなく、信頼できる手を借りながら“正しく冒険”していくこと。<br>
+       今の慎重さは悪くない、ただそのままでは150kmのポテンシャルは消える。</p>
+
+    <h3>心拍傾向</h3>
+    <p>平均HR<strong>150bpm</strong>、1分後ΔHR<strong>22bpm</strong>。<br>
+       → 回復力は可もなく不可もなく。運動中の呼吸は浅く、胸式に偏っている傾向。<br>
+       胸郭の可動が制限されていると、回旋動作にも制約が出る。<br>
+       吸気で肋骨を開き、吐気で骨盤を前に送るテンポを意識すると、トルクが戻り始める。</p>
+  </div>
 </section>
 
 <section id="menu">
@@ -145,6 +188,16 @@ document.addEventListener("DOMContentLoaded", function() {
 <div class="btn-back">
   <a href="index.html">← チーム共通ページへ戻る</a>
 </div>
+
+<script>
+/* タップで詳細開閉（ヒントの表示/非表示も同期） */
+function toggleFeedback(){
+  const detail = document.getElementById("feedback-detail");
+  const hint = document.querySelector(".feedback-summary .hint");
+  const showing = detail.classList.toggle("show");
+  if (hint) hint.style.display = showing ? "none" : "block";
+}
+</script>
 
 <footer>
   <p>© 2025 adjustment-lab | Design & Concept by H. Nishimoto</p>
