--- a/f.html
+++ b/f.html
@@ -5,65 +5,99 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>R.FUJIWARA</title>
 <style>
-  body{background:#0d1117;color:#e5e7eb;font-family:'Noto Sans JP',sans-serif;margin:0;padding:40px 20px 80px;line-height:1.8;}
+  body {
+    background:#0d1117;
+    color:#e5e7eb;
+    font-family:'Noto Sans JP',sans-serif;
+    margin:0;
+    padding:40px 20px 80px;
+    line-height:1.8;
+    max-width:980px;
+    margin-left:auto;
+    margin-right:auto;
+  }
   header{text-align:center;border-bottom:1px solid #1f2937;margin-bottom:30px;padding-bottom:15px;}
   h1{color:#facc15;font-size:1.8rem;letter-spacing:0.05em;}
   h2{color:#fde047;margin-top:40px;border-left:4px solid #facc15;padding-left:10px;}
-  table{width:100%;border-collapse:collapse;background:#111827;margin-top:15px;}
-  th,td{border:1px solid #1f2937;padding:10px;text-align:center;}
+  table{
+    width:100%;
+    border-collapse:collapse;
+    background:#111827;
+    margin-top:15px;
+    display:block;
+    overflow-x:auto;
+    border-radius:8px;
+  }
+  th,td{
+    border:1px solid #1f2937;
+    padding:10px;
+    text-align:center;
+    font-size:0.95rem;
+    white-space:nowrap;
+  }
   th{background:#78350f;color:#f1f5f9;}
   section{margin-top:25px;}
   .note{border:1px solid #374151;background:#111827;padding:15px;margin-top:15px;}
   .btn-back{display:block;text-align:center;margin-top:60px;}
   .btn-back a{background:#facc15;color:#000;padding:10px 20px;border-radius:6px;text-decoration:none;font-weight:bold;}
   .btn-back a:hover{background:#eab308;}
-  body {
-  max-width: 980px;
-  margin-left: auto;
-  margin-right: auto;
+  @media screen and (max-width:768px){
+    body{padding:20px 14px 60px;font-size:0.95rem;}
+    h1{font-size:1.4rem;}
+    th,td{font-size:0.85rem;padding:8px;}
+    table{font-size:0.85rem;}
+    footer{font-size:0.8rem;}
+  }
+</style>
+
+<style>
+.feedback-summary{
+  background:#1e293b;
+  border:1px solid #334155;
+  border-radius:8px;
+  padding:16px;
+  text-align:center;
+  cursor:pointer;
+  transition:background 0.3s;
+  -webkit-tap-highlight-color:transparent;
 }
-table {
-  display: block;
-  overflow-x: auto;
-  border-radius: 8px;
+.feedback-summary:hover{background:#3a2f0f;}
+.feedback-summary .catch{
+  font-size:1.1rem;
+  color:#fde68a;
+  font-weight:bold;
+  margin:0;
 }
-th, td {
-  font-size: 0.95rem;
-  white-space: nowrap;
+.feedback-summary .hint{
+  color:#9ca3af;
+  font-size:0.85rem;
+  margin-top:4px;
 }
-@media screen and (max-width: 768px) {
-  body {
-    padding: 20px 14px 60px;
-    font-size: 0.95rem;
-  }
-  h1 {
-    font-size: 1.4rem;
-  }
-  th, td {
-    font-size: 0.85rem;
-    padding: 8px;
-  }
-  table {
-    font-size: 0.85rem;
-  }
-  footer {
-    font-size: 0.8rem;
-  }
+.feedback-detail{
+  display:none;
+  margin-top:20px;
+  opacity:0;
+  transition:opacity 0.45s ease;
+}
+.feedback-detail.show{
+  display:block;
+  opacity:1;
 }
 </style>
 </head>
 <body>
- 
+
 <script>
-document.addEventListener("DOMContentLoaded", function() {
+/* パスワード保護 */
+document.addEventListener("DOMContentLoaded", function(){
   const password = prompt("パスワードを入力してください：");
-  if (password !== "14rf") {
+  if (!password || password !== "14rf") {
     alert("パスワードが違います。");
-    window.location.href = "index.html"; // トップページなどにリダイレクト
+    window.location.href = "index.html";
   }
 });
 </script>
- 
+
 <header>
   <h1>R. FUJIWARA</h1>
 </header>
@@ -79,6 +113,14 @@ document.addEventListener("DOMContentLoaded", function() {
 <section id="feedback">
   <h2>フィードバック</h2>
 
+  <!-- 一言キャッチ（タップで展開） -->
+  <div class="feedback-summary" onclick="toggleFeedback()">
+    <p class="catch">“波を起こす”だけでなく、“波を操る”ことを覚える。</p>
+    <p class="hint">(タップして詳細を表示)</p>
+  </div>
+
+  <!-- 詳細 -->
+  <div id="feedback-detail" class="feedback-detail">
   <h3>良い特徴</h3>
   <p>
   ・出力の瞬発性と反応スピードが高く体を“動かす”ことに関しての感覚は非常に鋭い。<br>
@@ -109,8 +151,7 @@ document.addEventListener("DOMContentLoaded", function() {
   熱量を抑えるのではなく、熱を流す。<br>心拍をコントロールできるようになった瞬間、  
   動きは劇的に安定する。
   </p>
-
- 
+  </div>
 </section>
 
 <section id="menu">
@@ -156,6 +197,16 @@ document.addEventListener("DOMContentLoaded", function() {
 <div class="btn-back">
   <a href="index.html">← チーム共通ページへ戻る</a>
 </div>
+
+<script>
+/* タップで詳細開閉 */
+function toggleFeedback(){
+  const detail = document.getElementById("feedback-detail");
+  const hint = document.querySelector(".feedback-summary .hint");
+  const showing = detail.classList.toggle("show");
+  if (hint) hint.style.display = showing ? "none" : "block";
+}
+</script>
 
 <footer>
   <p>© 2025 adjustment-lab | Design & Concept by H. Nishimoto</p>
