--- a/m.html
+++ b/m.html
@@ -5,12 +5,36 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Y.MIYAKE</title>
 <style>
-  body{background:#0d1117;color:#e5e7eb;font-family:'Noto Sans JP',sans-serif;margin:0;padding:40px 20px 80px;line-height:1.8;}
+  body {
+    background:#0d1117;
+    color:#e5e7eb;
+    font-family:'Noto Sans JP',sans-serif;
+    margin:0;
+    padding:40px 20px 80px;
+    line-height:1.8;
+    max-width:980px;
+    margin-left:auto;
+    margin-right:auto;
+  }
   header{text-align:center;border-bottom:1px solid #1f2937;margin-bottom:30px;padding-bottom:15px;}
   h1{color:#22c55e;font-size:1.8rem;letter-spacing:0.05em;}
   h2{color:#4ade80;margin-top:40px;border-left:4px solid #22c55e;padding-left:10px;}
-  table{width:100%;border-collapse:collapse;background:#111827;margin-top:15px;}
-  th,td{border:1px solid #1f2937;padding:10px;text-align:center;}
+  table{
+    width:100%;
+    border-collapse:collapse;
+    background:#111827;
+    margin-top:15px;
+    display:block;
+    overflow-x:auto;
+    border-radius:8px;
+  }
+  th,td{
+    border:1px solid #1f2937;
+    padding:10px;
+    text-align:center;
+    font-size:0.95rem;
+    white-space:nowrap;
+  }
   th{background:#14532d;color:#f1f5f9;}
   section{margin-top:25px;}
   .note{border:1px solid #374151;background:#111827;padding:15px;margin-top:15px;}
@@ -18,62 +42,66 @@
   .btn-back a{background:#22c55e;color:#fff;padding:10px 20px;border-radius:6px;text-decoration:none;}
   .btn-back a:hover{background:#15803d;}
 
-  /* -----------------------------------
-   レスポンシブ・可読性強化（三宅）
------------------------------------ */
-body {
-  max-width: 980px;
-  margin-left: auto;
-  margin-right: auto;
-}
+  @media screen and (max-width:768px){
+    body{padding:20px 14px 60px;font-size:0.95rem;}
+    h1{font-size:1.4rem;}
+    th,td{font-size:0.85rem;padding:8px;}
+    table{font-size:0.85rem;}
+    footer{font-size:0.8rem;}
+  }
+</style>
 
-table {
-  display: block;
-  overflow-x: auto;
-  border-radius: 8px;
+<!-- 開閉UI（統一仕様） -->
+<style>
+.feedback-summary{
+  background:#1e293b;
+  border:1px solid #334155;
+  border-radius:8px;
+  padding:16px;
+  text-align:center;
+  cursor:pointer;
+  transition:background 0.3s;
+  -webkit-tap-highlight-color:transparent;
 }
-
-th, td {
-  font-size: 0.95rem;
-  white-space: nowrap;
+.feedback-summary:hover{background:#14532d;}
+.feedback-summary .catch{
+  font-size:1.1rem;
+  color:#4ade80;
+  font-weight:bold;
+  margin:0;
 }
-
-@media screen and (max-width: 768px) {
-  body {
-    padding: 20px 14px 60px;
-    font-size: 0.95rem;
-  }
-  h1 {
-    font-size: 1.4rem;
-  }
-  th, td {
-    font-size: 0.85rem;
-    padding: 8px;
-  }
-  table {
-    font-size: 0.85rem;
-  }
-  footer {
-    font-size: 0.8rem;
-  }
+.feedback-summary .hint{
+  color:#9ca3af;
+  font-size:0.85rem;
+  margin-top:4px;
 }
-  
+.feedback-detail{
+  display:none;
+  margin-top:20px;
+  opacity:0;
+  transition:opacity 0.45s ease;
+}
+.feedback-detail.show{
+  display:block;
+  opacity:1;
+}
 </style>
 </head>
 <body>
- 
+
 <script>
-document.addEventListener("DOMContentLoaded", function() {
+/* パスワード保護 */
+document.addEventListener("DOMContentLoaded", function(){
   const password = prompt("パスワードを入力してください：");
-  if (password !== "0ym") {
+  if (!password || password !== "0ym") {
     alert("パスワードが違います。");
-    window.location.href = "index.html"; // トップページなどにリダイレクト
+    window.location.href = "index.html";
   }
 });
 </script>
- 
+
 <header>
-  <h1>Y.MIYAKE</h1>
+  <h1>Y. MIYAKE</h1>
 </header>
 
 <section id="data">
@@ -86,6 +114,15 @@ document.addEventListener("DOMContentLoaded", function() {
 
 <section id="feedback">
   <h2>フィードバック</h2>
+
+  <!-- 一言キャッチ -->
+  <div class="feedback-summary" onclick="toggleFeedback()">
+    <p class="catch">“呼吸で出力を整える技術”</p>
+    <p class="hint">(タップして詳細を表示)</p>
+  </div>
+
+  <!-- 詳細 -->
+  <div id="feedback-detail" class="feedback-detail">
  <h3>良い特徴</h3>
 <p>
 ・体格と筋出力に優れ、球速150kmに到達できる物理的条件を持っている。<br>
@@ -118,8 +155,7 @@ document.addEventListener("DOMContentLoaded", function() {
 吸って姿勢を立て、吐いて通す。<br>
 この呼吸テンポを練習でも徹底→勝てる投手へ。
 </p>
-
-
+  </div>
 </section>
 
 <section id="menu">
@@ -166,9 +202,19 @@ document.addEventListener("DOMContentLoaded", function() {
   <a href="index.html">← チーム共通ページへ戻る</a>
 </div>
 
+<script>
+/* タップで詳細開閉 */
+function toggleFeedback(){
+  const detail = document.getElementById("feedback-detail");
+  const hint = document.querySelector(".feedback-summary .hint");
+  const showing = detail.classList.toggle("show");
+  if (hint) hint.style.display = showing ? "none" : "block";
+}
+</script>
+
 <footer>
   <p>© 2025 adjustment-lab | Design & Concept by H. Nishimoto</p>
 </footer>
-  
+
 </body>
 </html>
