--- a/k.html
+++ b/k.html
@@ -150,6 +150,31 @@ th, td {
   display: block;
   opacity: 1;
 }
+
+.data-card {
+  background: #111827;
+  border: 1px solid #1f2937;
+  border-radius: 8px;
+  padding: 16px 20px;
+  margin-top: 15px;
+}
+
+.data-card p {
+  margin: 8px 0;
+  border-bottom: 1px solid #1f2937;
+  padding-bottom: 6px;
+}
+
+.data-card p:last-child {
+  border-bottom: none;
+}
+
+@media screen and (max-width: 768px) {
+  .data-card {
+    padding: 14px 16px;
+    font-size: 0.9rem;
+  }
+}
   
 </style>
   
@@ -162,17 +187,21 @@ th, td {
 
 <section id="data">
   <h2>測定結果</h2>
-  <table>
-    <tr><th>クーパー走</th><th>MB(back)</th><th>右回旋</th><th>左回旋</th><th>30mスプリント</th></tr>
-    <tr><td>2375 m</td><td>17.0 m</td><td>14.1 m</td><td>13.5 m</td><td>3.97 s</td></tr>
-  </table>
+
+  <div class="data-card">
+    <p><strong>クーパー走：</strong>2375 m</p>
+    <p><strong>MB(back)：</strong>17.0 m</p>
+    <p><strong>右回旋：</strong>14.1 m</p>
+    <p><strong>左回旋：</strong>13.5 m</p>
+    <p><strong>30mスプリント：</strong>3.97 s</p>
+  </div>
 </section>
 
-<section id="feedback">
+  <section id="feedback">
   <h2>フィードバック</h2>
     <!-- 一言キャッチ（ここをタップで展開） -->
   <div class="feedback-summary" onclick="toggleFeedback()">
-    <p class="catch">力を通す精度が、次のステージを決める。</p>
+    <p class="catch">力を通す精度が次のステージへの鍵。</p>
     <p class="hint">(タップして詳細を表示)</p>
   </div>
 
@@ -217,39 +246,39 @@ th, td {
   <h2>個別トレーニングメニュー</h2>
 
   <h3>① ランジスタートスプリント（10m）</h3>
-  <p><strong>目的：</strong> 初動時の骨盤前傾と股関節内旋反応を養う。<br>
-     <strong>フォーム：</strong> 前脚90°・後脚膝下垂。合図で股関節を内旋→地面を“引く”ように加速。<br>
-     <strong>キュー：</strong> 「押す」ではなく「引く」。骨盤を前へ滑らせる。<br>
-     <strong>強度：</strong> 5本×3セット／休息60秒。</p>
+  <p><strong>目的：</strong> <br>初動時の骨盤前傾と股関節内旋反応を養う。<br><br>
+     <strong>フォーム：</strong><br> 前脚90°・後脚膝下垂。合図で股関節を内旋→地面を“引く”ように加速。<br><br>
+     <strong>キュー：</strong> <br>「押す」ではなく「引く」。<br>骨盤を前へ滑らせる。<br><br>
+     <strong>強度：</strong> <br>5本×3セット／休息60秒。</p><br>
 
   <h3>② MBリフトスロー（3kg）</h3>
-  <p><strong>目的：</strong> 地面反力→骨盤→胸郭の縦連動を養う。<br>
-     <strong>フォーム：</strong> 股関節屈曲位から一気に伸展して天井へリリース。<br>
-     <strong>キュー：</strong> 「地面を押して身体を通す」。<br>
-     <strong>強度：</strong> 6回×2セット／休息90秒。</p>
+  <p><strong>目的：</strong> <br>地面反力→骨盤→胸郭の縦連動を養う。<br><br>
+     <strong>フォーム：</strong> <br>股関節屈曲位から一気に伸展して天井へ放る。<br><br>
+     <strong>キュー：</strong> <br>「地面を押して身体を通す」。<br><br>
+     <strong>強度：</strong> <br>6回×2セット／休息90秒。</p><br>
 
   <h3>③ スプリットホップキャッチ</h3>
-  <p><strong>目的：</strong> 着地剛性と骨盤安定の強化。<br>
-     <strong>フォーム：</strong> 片脚前・片脚後の姿勢から軽くジャンプ→静止。<br>
-     <strong>キュー：</strong> 「沈まず止まる」。<br>
-     <strong>強度：</strong> 8回×2セット／休息60秒。</p>
+  <p><strong>目的：<br></strong> 着地剛性と骨盤安定の強化。<br><br>
+     <strong>フォーム：</strong> <br>片脚前・片脚後の姿勢から軽くジャンプ→静止。<br><br>
+     <strong>キュー：</strong> <br>「沈まず止まる」。<br><br>
+     <strong>強度：</strong> <br>8回×2セット／休息60秒。</p><br>
 
   <h3>④ テンポラン（200m×4）</h3>
-  <p><strong>目的：</strong> 呼吸リズムと心拍の安定。<br>
-     <strong>キュー：</strong> 「呼吸は鼻2拍→口2拍」<br>
-     <strong>強度：</strong> HR140〜150／インターバル90秒。</p>
+  <p><strong>目的：</strong> <br>呼吸リズムと心拍の安定。<br><br>
+     <strong>キュー：</strong> <br>「呼吸は鼻2拍→口2拍」<br><br>
+     <strong>強度：</strong><br> HR140〜150／インターバル90秒。</p><br>
 
   <h3>⑤ ディープブリージング＋カーフリリース</h3>
-  <p><strong>目的：</strong> 呼吸筋のリセットと下腿の循環改善。<br>
-     <strong>方法：</strong> 仰向けで鼻吸・口吐を5秒ずつ。ローラーで腓腹筋〜ヒラメ筋を緩める。</p>
+  <p><strong>目的：</strong> <br>呼吸筋のリセットと下腿の循環改善。<br><br>
+     <strong>方法：</strong> <br>仰向けで鼻吸・口吐を5秒ずつ。<br>ローラーで腓腹筋〜ヒラメ筋を緩める。</p>
 </section>
 
 <section id="coach-note">
   <h2>メモ</h2>
   <p>・トレーニング1分後の呼吸回復速度をモニタリングできると良い。<br>
-     ・息を通したまま加速できているかを動画で確認。<br>
-     ・黒田の課題は“リズムと流れ”を取り戻すこと。<br>
-     ・詰める動作ではなく、解放の中で出力する意識を持たせる。</p>
+     ・息を通したまま加速できているかを確認。<br>
+     ・課題は“リズムと流れ”を取り戻すこと。<br>
+     ・詰める動作ではなく解放の中で出力する意識。</p>
 </section>
 
 <div class="btn-back">
@@ -277,7 +306,7 @@ document.addEventListener("DOMContentLoaded", function() {
 </script>
   
 <footer>
-  <p>© 2025 adjustment-lab | Design & Concept by H. Nishimoto</p>
+  <p>© 2025 adjustment-lab | <br>Design & Concept by H. Nishimoto</p>
 </footer>
 
 </body>
