--- a/k.html
+++ b/k.html
@@ -194,6 +194,8 @@ th, td {
     <p><strong>右回旋：</strong>14.1 m</p>
     <p><strong>左回旋：</strong>13.5 m</p>
     <p><strong>30mスプリント：</strong>3.97 s</p>
+    <p><strong>20mスプリント：</strong>1.50 s</p>
+    <p><strong>10mスプリント：</strong>2.83 s</p>
   </div>
 </section>
 
