--- a/t.html
+++ b/t.html
@@ -138,8 +138,8 @@ document.addEventListener("DOMContentLoaded", function(){
     <p><strong>右回旋：</strong>13.6 m</p>
     <p><strong>左回旋：</strong>14.2 m</p>
     <p><strong>30mスプリント：</strong>4.30 s</p>
-    <p><strong>20mスプリント：</strong>2.83 s</p>
-    <p><strong>10mスプリント：</strong>1.50 s</p>
+    <p><strong>20mスプリント：</strong>2.84 s</p>
+    <p><strong>10mスプリント：</strong>1.52 s</p>
   </div>
    
 </section>
@@ -149,7 +149,7 @@ document.addEventListener("DOMContentLoaded", function(){
 
   <!-- 一言キャッチ（既存本文の表現を抽出してUI化。内容は不変更） -->
   <div class="feedback-summary" onclick="toggleFeedback()">
-    <p class="catch">“骨盤を動かし、胸を遅らせる”時間を取り戻す。</p>
+    <p class="catch">“骨盤を動かし、胸を遅らせる”<br>その時間を取り戻す。</p>
     <p class="hint">(タップして詳細を表示)</p>
   </div>
 
@@ -181,31 +181,31 @@ document.addEventListener("DOMContentLoaded", function(){
   <h2>個別トレーニングメニュー</h2>
 
   <h3>① サイドステップ→スプリント（10m）</h3>
-  <p><strong>目的：</strong> 骨盤外旋→内旋の切り返し反応を高める。<br>
-     <strong>フォーム：</strong> サイドステップ2歩から正面へ加速。骨盤の方向転換を意識。<br>
-     <strong>キュー：</strong> 「骨盤で方向を変える」。<br>
-     <strong>強度：</strong> 6本×3セット／休息60秒。</p>
+  <p><strong>目的：</strong><br> 骨盤外旋→内旋の切り返し反応を高める。<br><br>
+     <strong>フォーム：</strong><br> サイドステップ2歩から正面へ加速。<br>骨盤の方向転換を意識。<br><br>
+     <strong>キュー：</strong><br> 「骨盤で方向を変える」。<br><br>
+     <strong>強度：</strong><br> 6本×3セット／休息60秒。</p><br>
 
   <h3>② MBローテーショントス（standing）</h3>
-  <p><strong>目的：</strong> 骨盤主導の回旋トルクを再教育。<br>
-     <strong>フォーム：</strong> 壁に対して側面を向き、骨盤→胸の順で回す。<br>
-     <strong>キュー：</strong> 「腰が先、胸はあと」。<br>
-     <strong>強度：</strong> 左右6回×2セット／休息90秒。</p>
+  <p><strong>目的：</strong><br> 骨盤主導の回旋トルクを再教育。<br><br>
+     <strong>フォーム：</strong><br> 壁に対して側面を向き、骨盤→胸の順で回す。<br><br>
+     <strong>キュー：</strong><br> 「腰が先、胸はあと」。<br><br>
+     <strong>強度：</strong><br> 左右6回×2セット／休息90秒。</p><br>
 
   <h3>③ ハーフニーダイアゴナルスロー</h3>
-  <p><strong>目的：</strong> 下半身の反力を体幹経由で上肢に伝える。<br>
-     <strong>フォーム：</strong> 片膝立ち。後脚の股関節を前へ押し出し、胸を対側へ遅らせる。<br>
-     <strong>キュー：</strong> 「後脚→骨盤→胸→腕」。<br>
-     <strong>強度：</strong> 8回×2セット／休息60秒。</p>
+  <p><strong>目的：</strong><br> 下半身の反力を体幹経由で上肢に伝える。<br><br>
+     <strong>フォーム：</strong><br> 片膝立ち。<br>後脚の股関節を前へ押し出し、胸を対側へ遅らせる。<br><br>
+     <strong>キュー：</strong><br> 「後脚→骨盤→胸→腕」。<br><br>
+     <strong>強度：</strong><br> 8回×2セット／休息60秒。</p><br>
 
   <h3>④ トレッドミル変速走</h3>
-  <p><strong>目的：</strong> 無酸素域と有酸素域の切替をスムーズに。<br>
-     <strong>設定：</strong> 30秒Fast（90%HRmax）＋60秒Slowを8セット。<br>
-     <strong>キュー：</strong> 「速く走るのではなく、リズムを切り替える」。</p>
+  <p><strong>目的：</strong><br> 無酸素域と有酸素域の切替をスムーズに。<br><br>
+     <strong>設定：</strong><br> 30秒Fast（90%HRmax）＋60秒Slowを8セット。<br><br>
+     <strong>キュー：</strong><br> 「速く走るのではなく、リズムを切り替える」。</p><br>
 
   <h3>⑤ 胸郭伸展＋斜角筋ストレッチ</h3>
-  <p><strong>目的：</strong> 回旋後の呼吸補助筋を解放する。<br>
-     <strong>方法：</strong> 胸を張り鎖骨を固定、首を側屈して吸気筋をストレッチ。</p>
+  <p><strong>目的：</strong><br> 回旋後の呼吸補助筋を解放する。<br><br>
+     <strong>方法：</strong><br> 胸を張り鎖骨を固定、首を側屈して吸気筋をストレッチ。</p>
 </section>
 
 <section id="coach-note">
@@ -231,7 +231,7 @@ function toggleFeedback(){
 </script>
 
 <footer>
-  <p>© 2025 adjustment-lab | Design & Concept by H. Nishimoto</p>
+  <p>© 2025 adjustment-lab | <br>Design & Concept by H. Nishimoto</p>
 </footer>
 
 </body>
