--- a/f.html
+++ b/f.html
@@ -104,6 +104,20 @@ document.addEventListener("DOMContentLoaded", function(){
 
 <section id="data">
   <h2>測定結果</h2>
+  <div class="data-card">
+    <p><strong>クーパー走：</strong>2500 m</p>
+    <p><strong>MB(back)：</strong>19.0 m</p>
+    <p><strong>MB(front)：</strong>17.2 m</p>
+    <p><strong>MB(up)：</strong>2.54 sec</p>
+    <p><strong>右回旋：</strong>13.1 m</p>
+    <p><strong>左回旋：</strong>13.1 m</p>
+    <p><strong>30mスプリント：</strong4.17 s</p>
+    <p><strong>20mスプリント：</strong1.53 s</p>
+    <p><strong>10mスプリント：</strong2.86 s</p>
+  </div>
+</section>
+<section id="data">
+  <h2>測定結果</h2>
   <table>
     <tr><th>クーパー走</th><th>MB(back)</th><th>右回旋</th><th>左回旋</th><th>30mスプリント</th></tr>
     <tr><td>2500 m</td><td>19.0 m</td><td>13.1 m</td><td>13.1 m</td><td>4.17 s</td></tr>
