--- a/k.html
+++ b/k.html
@@ -191,6 +191,8 @@ th, td {
   <div class="data-card">
     <p><strong>クーパー走：</strong>2375 m</p>
     <p><strong>MB(back)：</strong>17.0 m</p>
+    <p><strong>MB(front)：</strong>17.0 m</p>
+    <p><strong>MB(up)：</strong>2.68 sec</p>
     <p><strong>右回旋：</strong>14.1 m</p>
     <p><strong>左回旋：</strong>13.5 m</p>
     <p><strong>30mスプリント：</strong>3.97 s</p>
