--- a/t.html
+++ b/t.html
@@ -135,6 +135,8 @@ document.addEventListener("DOMContentLoaded", function(){
   <div class="data-card">
     <p><strong>クーパー走：</strong>2585 m</p>
     <p><strong>MB(back)：</strong>16.8 m</p>
+    <p><strong>MB(front)：</strong>15.9 m</p>
+    <p><strong>MB(up)：</strong>2.51 sec</p>
     <p><strong>右回旋：</strong>13.6 m</p>
     <p><strong>左回旋：</strong>14.2 m</p>
     <p><strong>30mスプリント：</strong>4.30 s</p>
