--- a/f.html
+++ b/f.html
@@ -126,16 +126,9 @@
     <p><strong>右回旋：</strong>13.1 m</p>
     <p><strong>左回旋：</strong>13.1 m</p>
     <p><strong>30mスプリント：</strong4.17 s</p>
-    <p><strong>20mスプリント：</strong1.53 s</p>
-    <p><strong>10mスプリント：</strong2.86 s</p>
+    <p><strong>20mスプリント：</strong2.86 s</p>
+    <p><strong>10mスプリント：</strong1.53 s</p>
   </div>
-</section>
-<section id="data">
-  <h2>測定結果</h2>
-  <table>
-    <tr><th>クーパー走</th><th>MB(back)</th><th>右回旋</th><th>左回旋</th><th>30mスプリント</th></tr>
-    <tr><td>2500 m</td><td>19.0 m</td><td>13.1 m</td><td>13.1 m</td><td>4.17 s</td></tr>
-  </table>
 </section>
 
 <section id="feedback">
@@ -186,32 +179,32 @@
   <h2>個別トレーニングメニュー</h2>
 
   <h3>① ミニハードルラン（3列×10m）</h3>
-  <p><strong>目的：</strong> リズムと接地タイミングの教育。<br>
-     <strong>フォーム：</strong> 3列のハードルを均等間隔に配置し、テンポよく通過。<br>
-     <strong>キュー：</strong> 「音でそろえる」。<br>
-     <strong>強度：</strong> 3セット。</p>
+  <p><strong>目的：</strong><br> リズムと接地タイミングの教育。<br><br>
+     <strong>フォーム：</strong><br> 3列のハードルを均等間隔に配置し、テンポよく通過。<br><br>
+     <strong>キュー：</strong><br> 「音でそろえる」。<br><br>
+     <strong>強度：</strong><br> 3セット。</p><br>
 
   <h3>② MBオーバーヘッドスロー＋リバウンドキャッチ</h3>
-  <p><strong>目的：</strong> 出力方向の精度と姿勢安定。<br>
-     <strong>フォーム：</strong> 天井へスロー→胸郭を崩さずキャッチ。骨盤前傾を保つ。<br>
-     <strong>キュー：</strong> 「背骨を通して投げる」。<br>
-     <strong>強度：</strong> 6回×2セット／休息90秒。</p>
+  <p><strong>目的：</strong><br> 出力方向の精度と姿勢安定。<br><br>
+     <strong>フォーム：</strong><br> 天井へスロー→胸郭を崩さずキャッチ。<br>骨盤前傾を保つ。<br><br>
+     <strong>キュー：</strong><br> 「背骨を通して投げる」。<br><br>
+     <strong>強度：</strong><br> 6回×2セット／休息90秒。</p><br>
 
   <h3>③ ニーアップ→ジャンプ→スプリント</h3>
-  <p><strong>目的：</strong> 出力を“滑らかに繋ぐ”動作連鎖の獲得。<br>
-     <strong>フォーム：</strong> 片脚ニーアップ→ジャンプ→10m走。<br>
-     <strong>キュー：</strong> 「跳ねずに流す」。<br>
-     <strong>強度：</strong> 5本×3セット。</p>
+  <p><strong>目的：</strong><br> 出力を“滑らかに繋ぐ”動作連鎖の獲得。<br><br>
+     <strong>フォーム：</strong><br> 片脚ニーアップ→ジャンプ→10m走。<br><br>
+     <strong>キュー：</strong><br> 「跳ねずに流す」。<br><br>
+     <strong>強度：</strong><br> 5本×3セット。</p><br>
 
   <h3>④ ロードワーク3km（テンポ走）</h3>
-  <p><strong>目的：</strong> 呼吸と脚リズムの協調。<br>
-     <strong>キュー：</strong> 「音と呼吸を揃える」。<br>
-     <strong>強度：</strong> HR75〜80%max。</p>
+  <p><strong>目的：</strong><br> 呼吸と脚リズムの協調。<br><br>
+     <strong>キュー：</strong><br> 「音と呼吸を揃える」。<br><br>
+     <strong>強度：</strong><br> HR75〜80%max。</p><br>
 
   <h3>⑤ デッドバグ＋ブリージング</h3>
-  <p><strong>目的：</strong> 体幹安定と呼吸制御。<br>
-     <strong>フォーム：</strong> 仰向けで脚・腕を90°。反対側を伸ばす。腰を浮かせず呼吸。<br>
-     <strong>キュー：</strong> 「腰を床に押し付け、息で体を安定させる」。</p>
+  <p><strong>目的：</strong><br> 体幹安定と呼吸制御。<br><br>
+     <strong>フォーム：</strong><br> 仰向けで脚・腕を90°で反対側を伸ばす。<br>腰を浮かせず呼吸。<br><br>
+     <strong>キュー：</strong><br> 「腰を床に押し付け、息で体を安定させる」。</p
 </section>
 
 <section id="coach-note">
