--- a/k.html
+++ b/k.html
@@ -196,8 +196,8 @@ th, td {
     <p><strong>右回旋：</strong>14.1 m</p>
     <p><strong>左回旋：</strong>13.5 m</p>
     <p><strong>30mスプリント：</strong>3.99 s</p>
-    <p><strong>20mスプリント：</strong>1.50 s</p>
-    <p><strong>10mスプリント：</strong>2.83 s</p>
+    <p><strong>20mスプリント：</strong>2.83 s</p>
+    <p><strong>10mスプリント：</strong>1.50 s</p>
   </div>
 </section>
 
@@ -290,12 +290,20 @@ th, td {
 </div>
 
 <script>
-
 function toggleFeedback() {
   const detail = document.getElementById("feedback-detail");
   const hint = document.querySelector(".feedback-summary .hint");
-  const showing = detail.classList.toggle("show");
-  hint.style.display = showing ? "none" : "block";
+
+  // すでに開いている場合 → 閉じる
+  if (detail.classList.contains("show")) {
+    detail.classList.remove("show");
+    if (hint) hint.style.display = "block";
+  } 
+  // 閉じている場合 → 開く
+  else {
+    detail.classList.add("show");
+    if (hint) hint.style.display = "none";
+  }
 }
 </script>
 
