--- a/k.html
+++ b/k.html
@@ -214,30 +214,31 @@ th, td {
   
 <h3>良い特徴</h3>
 <p>
-・社会人野球の投手として“光る素材”を持つ。出力ポテンシャルは高く、身体感覚も鋭い。<br>
-・ただし、良さが長続きしない。力の通し方が雑で、丁寧さと呼吸のタイミングが噛み合っていない。<br>
-・腕の振りに頼りすぎて、骨盤からのエネルギー伝達が寸断されている。<br>
-・それでも、ボール自体には“強さ”がある。球質は悪くなく、制御が整えば上位レベルに通用する。<br>
-・いまは“瞬発で押す投手”。ここから“流れで通す投手”に変われるかが分岐点。<br>
-・雑な出力を整え、呼吸を軸にリズムを作れれば、先発を狙える可能性あり。</p>
+・社会人野球の投手として“光る素材”を持つ。<br><br>
+・出力ポテンシャルは高く、身体感覚も鋭い。<br><br>
+・ただし良さが長続きしない、力の通し方が雑で丁寧さと呼吸のタイミングが噛み合っていない。<br><br>
+・腕の振りに頼りすぎて、骨盤からのエネルギー伝達が寸断されている。<br><br>
+・それでも制御が整えば上位レベルに通用する。<br><br>
+・いまは“瞬発で押す投手”だがここから“流れで通す投手”に変われるかが分岐点。<br><br>
+・雑な出力を整え呼吸を軸にリズムを作れれば、先発を狙える可能性あり。</p><br>
   
  <h3>課題</h3>
 <p>
-・力を出す瞬間に息を止める癖が強く、全身の連動が途切れている。<br>
-・「力む＝出す」と誤解しており、結果としてリリース時に余白がない。<br>
-・骨盤で始動できていないため、腕の出力が単発で終わり、リズムが続かない。<br>
-・球速もキレも悪くはないが、“呼吸と骨盤のタイミング”が噛み合わず、同じ球を再現できない。<br>
-・まず必要なのは「抜く勇気」。呼吸で動作を整え、力を“通す”感覚を取り戻すこと。<br>
-・力ではなく流れで投げる。その切り替えができれば、制球も球質も一気に安定する。
+・力を出す瞬間に息を止める癖が強く、全身の連動が途切れている。<br><br>
+・「力む＝出す」と誤解しており、結果としてリリース時に余白がない。<br><br>
+・骨盤で始動できていないため腕の出力が単発で終わり、リズムが続かない。<br><br>
+・球速もキレも悪くはないが“呼吸と骨盤のタイミング”が噛み合わず、同じ球を再現できない。<br><br>
+・まず必要なのは「抜く勇気」で呼吸で動作を整え、力を“通す”感覚を取り戻すこと。<br><br>
+・力ではなく"流れで投げる"その切り替えができれば、制球も球質も一気に安定する。<br>
 </p>
   
 <h3>心拍傾向</h3>
 <p>
 ペース走中の平均HRは<strong>160bpm前後</strong>。<br>目標（150前後）より常に高く、<strong>無駄に力を使っている</strong>状態。<br>
 息が通らず出力で押し切ろうとする分、体は早い段階で酸欠気味になる。<br>
-心拍が高いことを「頑張っている」と勘違いしてはいけない。<br>これは“呼吸の乱れ”のサインだ。<br>
-<em>力を抜いても同じ速度を維持できる</em>ようになれば、それが本当の強さ。<br><br>
-跳ね上がった心拍が下がらないのは、体が“抜けない”まま走り続けている証拠。<br>
+心拍が高いことを「頑張っている」と勘違いしてはいけない。<br>これは“呼吸の乱れ”のサイン。<br>
+<em>力を抜いても同じ速度を維持できる</em>ようになれば、それが本当の強さとなる。<br><br>
+跳ね上がった心拍が下がらないのは体が“抜けない”まま走り続けている証拠。<br>
 まずは呼吸テンポ（吸2拍→吐2拍）で心拍を支配できるか。<br>
 “息を通して動く”という基本ができなければ、どれだけ走っても数字は変わらない。
 </p>
